Aligned History page to lightmode design + aligned DAO to lightmode design (one fix on the select missing) + some alignments to index, Select + some darkmode fixes

--- a/packages/boba/gateway/src/containers/history/TX_All.module.scss
+++ b/packages/boba/gateway/src/containers/history/TX_All.module.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   padding: 10px;
-  padding-top: 0px;
+  padding-top: 0;
   background: $background;
 }
 
@@ -107,11 +107,11 @@
 .datePickerInput {
     border-radius: 8px;
     width: 130px;
-    margin: 0px 15px;
+    margin: 0 15px;
     position: relative;
   @include mobile {
       width: 100%;
-      margin: 0px;
+      margin: 0;
     }
 
 
@@ -126,11 +126,11 @@
     }
 
     input {
-      background: #FFFFFF0A;
-      color: white;
+      background: rgba(3, 19, 19, 0.04);
+      color: rgba(0, 0, 0, 0.87);
       height: 40px;
       width: 130px;
-      padding: 0px 15px;
+      padding: 0 15px;
       line-height: 40px;
       border: 0;
       border-radius: 8px;
@@ -140,6 +140,44 @@
         width: 100%;
       }
     }
+}
+
+.datePickerInputDark {
+  border-radius: 8px;
+  width: 130px;
+  margin: 0px 15px;
+  position: relative;
+  @include mobile {
+    width: 100%;
+    margin: 0;
+  }
+
+
+  &::after {
+    content: '';
+    width: 0;
+    height: 0;
+    position: absolute;
+    right: 10px;
+    font-size: 25px;
+    bottom: 15px;
+  }
+
+  input {
+    background: #FFFFFF0A;
+    color: white;
+    height: 40px;
+    width: 130px;
+    padding: 0 15px;
+    line-height: 40px;
+    border: 0;
+    border-radius: 8px;
+    font-size: 16px;
+    text-align: left;
+    @include mobile {
+      width: 100%;
+    }
+  }
 }
 
 .popperStyle {
